--- a/package.json
+++ b/package.json
@@ -15,21 +15,28 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fontsource/lato": "^4.5.10",
     "@mdx-js/react": "^2.3.0",
     "babel-plugin-styled-components": "^2.0.7",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "classnames": "^2.3.2",
     "gatsby": "^5.7.0",
     "gatsby-plugin-image": "^3.7.0",
     "gatsby-plugin-manifest": "^5.7.0",
     "gatsby-plugin-mdx": "^5.7.0",
+    "gatsby-plugin-sass": "^6.7.0",
     "gatsby-plugin-sharp": "^5.7.0",
     "gatsby-plugin-sitemap": "^6.7.0",
     "gatsby-plugin-styled-components": "^6.7.0",
     "gatsby-source-filesystem": "^5.7.0",
     "gatsby-transformer-sharp": "^5.7.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
+    "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
     "react-slick": "^0.29.0",
+    "sass": "^1.59.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.9"
   }
