--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-plugin-sitemap": "^6.7.0",
     "gatsby-plugin-styled-components": "^6.7.0",
     "gatsby-source-filesystem": "^5.7.0",
+    "gatsby-source-wordpress": "^7.8.0",
     "gatsby-transformer-json": "^5.8.0",
     "gatsby-transformer-sharp": "^5.7.0",
     "react": "^18.2.0",
