--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "classnames": "^2.3.2",
     "formik": "^2.2.9",
     "gatsby": "^5.7.0",
+    "gatsby-awesome-pagination": "^0.3.8",
     "gatsby-plugin-image": "^3.7.0",
     "gatsby-plugin-manifest": "^5.7.0",
     "gatsby-plugin-mdx": "^5.7.0",
