--- a/package.json
+++ b/package.json
@@ -39,10 +39,14 @@
     "gatsby-source-wordpress": "^7.8.0",
     "gatsby-transformer-json": "^5.8.0",
     "gatsby-transformer-sharp": "^5.7.0",
+    "i18next": "^23.2.3",
+    "i18next-browser-languagedetector": "^7.0.2",
+    "i18next-http-backend": "^2.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.1",
     "react-masonry-css": "^1.0.16",
     "react-slick": "^0.29.0",
     "sass": "^1.59.3",
@@ -52,6 +56,7 @@
   },
   "devDependencies": {
     "fs": "^0.0.1-security",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "prettier": "^2.8.8"
   }
 }
