--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "classnames": "^2.3.2",
+    "deepmerge": "^4.3.1",
     "formik": "^2.2.9",
     "gatsby": "^5.7.0",
     "gatsby-awesome-pagination": "^0.3.8",
@@ -46,6 +47,7 @@
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^13.0.1",
     "react-masonry-css": "^1.0.16",
     "react-particles": "^2.10.1",
